--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,3 +90,11 @@ select {
 .form-group select {
   height: 35px;
 } /* Left-align the label */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
